# llava-lens

./: .gitignore  Dockerfile  README.md  docker-compose.yml  get_embeds.py  hooked_llava.py  llava_lens.py  main.py  pyproject.toml  result.html
configs/: default.yaml
examples/: custom_model.py  trauma_detection.py
hf-space/: Dockerfile  README.md  app.py  deploy.sh  requirements.txt
hf-space/static/: index.html
src/llava_lens/: __init__.py  __main__.py
src/llava_lens/analysis/: __init__.py  attention.py  logit_lens.py  patch_selection.py  pipeline.py
src/llava_lens/cli/: __init__.py  app.py
src/llava_lens/core/: __init__.py  config.py  exceptions.py  logging.py  registry.py
src/llava_lens/data/: __init__.py  dataset.py  transforms.py
src/llava_lens/processing/: __init__.py  batch.py  pipeline.py
src/llava_lens/storage/: __init__.py  cache.py  local.py
src/llava_lens/tracking/: __init__.py  tracker.py
src/llava_lens/visualization/: __init__.py  dashboard.py
src/llava_lens/web/: __init__.py  app.py
src/llava_lens/web/static/css/: style.css
src/llava_lens/web/static/js/: app.js
src/llava_lens/web/templates/: analyze.html  base.html  batch.html  index.html  models.html  runs.html  settings.html
